--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
+browser.id=Chrome
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=C:\\xampp\\htdocs\\questoes_concursos
 index.file=index.php
 run.as=LOCAL
-url=http://localhost:8080/questoes_concursos/
+url=http://localhost:80/questoes_concursos/
